Created view recycling settings page with popup messages.

--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="me.garisian.eventlocator.SettingsActivity">
+    tools:context="me.garisian.eventlocator.OptionsActivity">
 
 
     <android.support.design.widget.AppBarLayout
@@ -34,17 +34,17 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:padding="10dp"
-        android:text="@string/some_text" android:textSize="20sp" />
 
 
-    <Button
-        android:id="@+id/findSelected"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/editText222"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose Your Options --- ACTIVITY-SETTINGS.XML" />
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="MOOO" />
 
-    <ListView android:id="@+id/listOfSettings" android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+
 </LinearLayout>
+
+
