--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/options_settings"
+        android:orderInCategory="100"
+        android:title="@string/options_settings"
+        app:showAsAction="never" />
 </menu>
