--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,11 @@
         android:orderInCategory="100"
         android:title="@string/options_settings"
         app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/results_settings"
+        android:orderInCategory="100"
+        android:title="@string/results_settings"
+        app:showAsAction="never" />
 </menu>
