--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -39,4 +39,13 @@
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content" android:padding="10dp"
         android:text="@string/insideResults" android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/findSelected"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choose Your Options --- ACTIVITY-RESULTS.XML" />
+
+    <ListView android:id="@+id/listOfResults" android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </LinearLayout>
