options are implemented. Shows multiple selected options near any address

--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -33,16 +33,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <TextView android:layout_width="fill_parent"
+        android:layout_height="wrap_content" android:padding="10dp"
+        android:text="@string/some_text" android:textSize="20sp" />
 
 
-
-    <TextView
-        android:id="@+id/editText222"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/findSelected"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="MOOO" />
+        android:text="Choose Your Options --- ACTIVITY-OPTIONS.XML" />
+
+    <ListView android:id="@+id/listOfOptions" android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 
 </LinearLayout>
