Refactered Options area and fixed edge cases. Shows broken distances due to float-point rounding errors using longitude and latitude

--- a/app/src/main/res/layout/settings_info.xml
+++ b/app/src/main/res/layout/settings_info.xml
@@ -24,7 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/checkBox1"
         android:layout_alignBottom="@+id/checkBox1"
-        android:layout_toRightOf="@+id/checkBox1"
-        android:text="TextView" />
+        android:layout_toRightOf="@+id/checkBox1" />
 
 </RelativeLayout>
