Google maps locates user's location with almost perfect acccuracy and updates field with the right address

--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -35,7 +36,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
+    <!--
+   Textbox where user is prompt to write an address
+    -->
     <EditText
         android:id="@+id/DataInput"
         android:layout_width="match_parent"
@@ -43,6 +46,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name" />
+
+    <!--
+    Button which is used move ontot he options page
+    -->
     <Button
         android:id="@+id/btnDoSomething"
         android:layout_width="match_parent"
@@ -51,6 +58,27 @@
         app:layout_anchorGravity="center_vertical|right"
         />
 
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!--
+        Button which is used to get current location
+        -->
+        <Button
+            android:id="@+id/btnGetLoc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/getMyLocation"
+            app:layout_anchorGravity="center_vertical|right"
+            />
+
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
+    <!--
+    Area where googlemaps is shown
+    -->
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -60,4 +88,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="me.garisian.eventlocator.MapsActivity" />
+
 </LinearLayout>
