--- a/main/res/layout/activity_settings.xml
+++ b/main/res/layout/activity_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,9 @@
     android:orientation="vertical"
     tools:context="me.garisian.eventlocator.SettingsActivity">
 
-
+    <!--
+    MenuBar at top of App which autofills with other options
+    -->
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,6 +48,9 @@
         android:layout_height="wrap_content"
         android:text="Choose Your Options --- ACTIVITY-SETTINGS.XML" />
 
+    <!--
+    A list of settings which g
+    -->
     <ListView android:id="@+id/listOfSettings" android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </LinearLayout>
