--- a/main/res/layout/activity_results.xml
+++ b/main/res/layout/activity_results.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -46,6 +47,9 @@
         android:layout_height="wrap_content"
         android:text="Choose Your Options --- ACTIVITY-RESULTS.XML" />
 
+    <!--
+    A list of resuluts which get populated dynamically based on the response JSON
+    -->
     <ListView android:id="@+id/listOfResults" android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </LinearLayout>
