--- a/main/res/layout/activity_address.xml
+++ b/main/res/layout/activity_address.xml
@@ -64,7 +64,7 @@
         android:id="@+id/DataInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:cursorVisible="false"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginLeft="5dp"
@@ -72,7 +72,7 @@
         android:textColor="#FFFFFF"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Ex: 123 Fake Road, Toronto" />
+        android:text="@string/defaultEditBoxText" />
 
     <!--
     Button which is used move ontot he options page
@@ -127,19 +127,28 @@
     <!--
     Area where googlemaps is shown
     -->
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/map_border"
 
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        tools:context="me.garisian.eventlocator.MapsActivity" />
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp">
+
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            tools:context="me.garisian.eventlocator.MapsActivity" >
+
+        </fragment>
+    </LinearLayout>
 
 </LinearLayout>
