--- a/main/res/layout/activity_locationdetail.xml
+++ b/main/res/layout/activity_locationdetail.xml
@@ -3,25 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#00ACE6"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TESTTEST1" />
+        android:gravity="center"
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TESTTEST2" />
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:background="@drawable/option_submit"
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TESTTEST3" />
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="Location Map" />
+
 
     <!--
 Area where googlemaps is shown
